// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<li
  class="DropdownListItem"
  data-test-id="cf-ui-dropdown-list-item"
  role="menuitem"
>
  DropdownMenuItem
</li>
`;

exports[`renders the component as active 1`] = `
<li
  class="DropdownListItem DropdownListItem--active"
  data-test-id="cf-ui-dropdown-list-item"
  role="menuitem"
>
  entry
</li>
`;

exports[`renders the component as disabled 1`] = `
<li
  class="DropdownListItem DropdownListItem--disabled"
  data-test-id="cf-ui-dropdown-list-item"
  role="menuitem"
>
  entry
</li>
`;

exports[`renders the component with a href 1`] = `
.emotion-0 {
  display: inherit;
  outline: 0;
}

<li
  class="DropdownListItem DropdownListItem__submenu-toggle"
  data-test-id="cf-ui-dropdown-list-item"
  role="menuitem"
>
  <a
    class="DropdownListItem__button"
    data-test-id="cf-ui-dropdown-list-item-button"
    href="#"
    type="button"
  >
    <span
      class="DropdownListItem__button__inner-wrapper emotion-0"
      tabindex="-1"
    >
      DropdownListItem with a href
    </span>
  </a>
</li>
`;

exports[`renders the component with an additional class name 1`] = `
<li
  class="DropdownListItem my-extra-class"
  data-test-id="cf-ui-dropdown-list-item"
  role="menuitem"
>
  Entry
</li>
`;
